Downgrade to Java 8, reintroduce CaDSRoboticArmInterface